# hardware_interface_vnx

./: .gitignore
log/: latest_list
src/: config_can.sh
src/log/: latest_list
src/motor_control/: CMakeLists.txt  note_for_ros2_motor_control.md  package.xml  robstride_hardware_simple_plugin.xml
src/motor_control/config/: jgp_hw_simple.yaml  two_joint_hw_simple.urdf.xacro
src/motor_control/include/motor_control/: motor_config.hpp  quadruped_controller.hpp  robstride.hpp  robstride_system_simple.hpp
src/motor_control/launch/: bringup_hw_two_joint_simple.launch.py  motor_with_can.launch.py
src/motor_control/scripts/: monitor_can.sh  setup_4can.sh  start_ca_bridges.sh  test_all_motors.sh
src/motor_control/src/: motor_config.cpp  motor_control_node.cpp  quadruped_control_node.cpp  quadruped_controller.cpp  robstride.cpp  robstride_system_simple.cpp
src/motor_control_hw_interface/: CMakeLists.txt  README.md  package.xml  robstride_hardware_plugin.xml
src/motor_control_hw_interface/config/: quadruped_controllers.yaml  quadruped_ros2_control.yaml
src/motor_control_hw_interface/include/motor_control_hw_interface/: robstride_system.hpp
src/motor_control_hw_interface/launch/: quadruped_bringup.launch.py
src/motor_control_hw_interface/src/: robstride_system.cpp
src/motor_control_hw_interface/urdf/: quadruped.ros2_control.xacro
src/motor_feedback_msg/: CMakeLists.txt  package.xml
