cmake_minimum_required(VERSION 3.8)
project(motor_control_hw_interface)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# ========== DEPENDENCIES ==========
find_package(ament_cmake REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(pluginlib REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(motor_control REQUIRED)

# ========== INCLUDE DIRECTORIES ==========
include_directories(include)

# ========== HARDWARE INTERFACE PLUGIN ==========
add_library(${PROJECT_NAME} SHARED
  src/robstride_system.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE include)

ament_target_dependencies(${PROJECT_NAME}
  hardware_interface
  pluginlib
  rclcpp
  rclcpp_lifecycle
  motor_control
)

# Export plugin description
pluginlib_export_plugin_description_file(hardware_interface robstride_hardware_plugin.xml)

# ========== INSTALL ==========
install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

install(DIRECTORY include/
  DESTINATION include
)

install(DIRECTORY 
  config 
  launch
  urdf
  DESTINATION share/${PROJECT_NAME}/
)

install(FILES robstride_hardware_plugin.xml
  DESTINATION share/${PROJECT_NAME}
)

# ========== EXPORT ==========
ament_export_include_directories(include)
ament_export_libraries(${PROJECT_NAME})
ament_export_dependencies(
  hardware_interface
  pluginlib
  rclcpp
  rclcpp_lifecycle
  motor_control
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()